# Bot_Vikup

./: Bot_Vikup.pyproj  Bot_Vikup.sln  README.md  pyproject.toml  requirements.txt
contractbot/: __init__.py  __main__.py  adb.py  app.py  buyback.py  config.py  database.py  discord_bot.py  notifications.py  ocr.py  parsing.py  processor.py  utils.py
scripts/: install.py  install.sh  update_from_github.py  update_from_github.sh
